# rust-linux-mini-kernel

./: .gitignore  AZURE_BUILD_DEPLOYMENT_GUIDE.md  AZURE_CODEX_RUN_SUMMARY.md  AZURE_DEPLOYMENT_COMPLETE.md  BENCHMARKS.md  CODEX_ANALYSIS_AND_RECOMMENDATIONS.md  CODE_QUALITY_ANALYSIS.md  COMPILATION_JOURNEY_SUMMARY.md  CONTRIBUTING.md  CURRENT_STATUS_AND_NEXT_STEPS.md  Cargo.toml  DEPLOYMENT_SUCCESS.md  Dockerfile.codex  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_ROADMAP.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_REPORT.json  KERNEL_API_CHALLENGES.md  KERNEL_INTEGRATION_GUIDE.md  KERNEL_POLISH_AGENT_INTEGRATION.md  LEAN_VERIFICATION_RESOURCES.md  LICENSE  MICRO_KERNEL_DEMO_SUCCESS.md  Makefile  NIGHTLY_PROGRESS_REPORT.md  PHASE4_INTEGRATION_REPORT.json  README.md  RELEASE_COMPLETE.md  ROADMAP.md  RUST_CODE_ANALYSIS.md  RUST_VS_C_COMPARISON.md  SCENARIO_B_EXECUTION_LOG.md  SCENARIO_B_STATUS.md  SESSION_2026_05_17.md  SESSION_SUMMARY.md  SPECIFICATIONS_UPLOADED.md  TEST_DEPLOYMENT_SUMMARY.md  VALIDATION_REPORT.json  benchmark_results.json  build_rs_cov.profraw  (+23 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  formal-verification.yml
azure_build/: DEPLOYMENT_COMPLETE.md  DOCKER_BUILD_FIXES.md  Dockerfile  Dockerfile.with-code  EXECUTION_REPORT.md  EXECUTION_STATUS.md  FINAL_STATUS.md  IMPLEMENTATION_COMPLETE.md  README.md  STATUS_UPDATE_20260517.md  azure-container-app.yaml  benchmark_suite.sh  build_all.sh  deploy_to_azure.sh  fix_common_issues.py  monitor_build.sh  run_azure_benchmarks.sh  run_azure_build.sh  run_azure_tests.sh  run_full_pipeline.sh  run_simple_build_test.sh  test_all.sh  test_workspace.sh  validate_industry_baselines.py
azure_codex_compiler/: DRY_RUN_README.md  README.md  SOCRATE_ENDPOINT_STATUS.md  codex_compilation_fixer.py  deploy_overnight_batch.sh  dry_run_test.py  test_single_module.sh
benchmarks/: BENCHMARK_README.md  PARALLEL_MONITOR_README.md  c_to_rust_compilation_benchmark.py  host.json  parallel_improvement_monitor.py  requirements.txt
benchmarks/azure_function_benchmark/: __init__.py
benchmarks/baselines/: README.md  gpt53_codex_progress_20260517.json
benchmarks/c/: arp_process  arp_process.c  route_lookup  route_lookup.c  skbuff_alloc  skbuff_alloc.c
benchmarks/checkpoints/: checkpoint_1779005402.json  checkpoint_1779005409.json  checkpoint_1779005416.json  checkpoint_1779005423.json  checkpoint_1779005430.json  checkpoint_1779005437.json  checkpoint_1779005444.json  checkpoint_1779005451.json  checkpoint_1779005458.json  checkpoint_1779005465.json  checkpoint_1779005472.json  checkpoint_1779005479.json  checkpoint_1779005486.json  checkpoint_1779005493.json  checkpoint_1779005500.json  checkpoint_1779005507.json  checkpoint_1779005514.json  checkpoint_1779005521.json  checkpoint_1779005528.json  checkpoint_1779005535.json  checkpoint_1779005542.json  checkpoint_1779005549.json  (+66 more)
compilation_fixes/: gemini_checkpoint.json  mistral_checkpoint.json
crates/kernel_types/: Cargo.toml
crates/kernel_types/src/: lib.rs  lib.rs.bak
examples/micro_kernel_demo/: Cargo.toml  README.md
examples/micro_kernel_demo/src/: main.rs  main.rs.bak  main_hosted.rs  main_hosted.rs.bak
kernel/: lib.rs
net/core/bpf_sk_storage/: Cargo.toml
net/core/bpf_sk_storage/src/: lib.rs
net/core/devlink/: Cargo.toml
net/core/devlink/src/: lib.rs
net/core/drop_monitor/: Cargo.toml
net/core/drop_monitor/src/: lib.rs
net/core/dst_cache/: Cargo.toml
net/core/dst_cache/src/: lib.rs
net/core/fib_notifier/: Cargo.toml
net/core/fib_notifier/src/: lib.rs
net/core/flow_offload/: Cargo.toml
net/core/flow_offload/src/: lib.rs
net/core/lwt_bpf/: Cargo.toml
net/core/lwt_bpf/src/: lib.rs
net/core/page_pool/: Cargo.toml
net/core/page_pool/src/: lib.rs
net/core/ptp_classifier/: Cargo.toml
net/core/ptp_classifier/src/: lib.rs
net/core/secure_seq/: Cargo.toml
net/core/secure_seq/src/: lib.rs
net/core/skbuff/: Cargo.toml
net/core/skbuff/src/: lib.rs
net/core/skmsg/: Cargo.toml
net/core/skmsg/src/: lib.rs
net/core/sysctl_net_core/: Cargo.toml
net/core/sysctl_net_core/src/: lib.rs
net/core/tso/: Cargo.toml
net/core/tso/src/: lib.rs
net/ipv4/af_inet/: Cargo.toml
net/ipv4/af_inet/src/: lib.rs
net/ipv4/fib_frontend/: Cargo.toml
net/ipv4/fib_frontend/src/: lib.rs
net/ipv4/fib_semantics/: Cargo.toml
net/ipv4/fib_semantics/src/: lib.rs
net/ipv4/gre_demux/: Cargo.toml
net/ipv4/gre_demux/src/: lib.rs
net/ipv4/inet_timewait_sock/: Cargo.toml
net/ipv4/inet_timewait_sock/src/: lib.rs
net/ipv4/ip_output/: Cargo.toml
net/ipv4/ip_output/src/: lib.rs
net/ipv4/ip_vti/: Cargo.toml
net/ipv4/ip_vti/src/: lib.rs
net/ipv4/ipmr/: Cargo.toml
net/ipv4/ipmr/src/: lib.rs
net/ipv4/ipmr_base/: Cargo.toml
net/ipv4/ipmr_base/src/: lib.rs
net/ipv4/raw/: Cargo.toml
net/ipv4/raw/src/: lib.rs
net/ipv4/raw_diag/: Cargo.toml
net/ipv4/raw_diag/src/: lib.rs
net/ipv4/sysctl_net_ipv4/: Cargo.toml
net/ipv4/sysctl_net_ipv4/src/: lib.rs
net/ipv4/tcp_illinois/: Cargo.toml
net/ipv4/tcp_illinois/src/: lib.rs
scenario_b_specs/: README.md  SCENARIO_B_MASTER_SPECIFICATION.md  build_master_spec.py  cachemanager_spec.json  common_spec.json  dataloader_spec.json  datastructures_spec.json  main_spec.json  orchestrator_spec.json  pricingengine_spec.json  searchengine_spec.json  spectorust_report.json  yamldataloader_spec.json
scripts/: apply_quick_wins.py  architect_fixer.py  continuous_monitor.sh  fix_import_placement.py  fix_import_placement.sh  generate_kernel_types.py  generate_missing_fields.py  generate_missing_fields_v2.py  generate_missing_kernel_types.py  generate_mock_stubs.py  monitor_compilation_status.sh  monitor_progress.sh  remove_duplicate_structs.py  update_modules_with_kernel_types.sh
specifications/: ### **Honest Review of [rust-linux-mini-.md  ARP_SPECIFICATION.lean  FULL_KERNEL_SPECIFICATION.lean  Improve SocrateAgora to implement the .md  KERNEL_TYPES_SPECIFICATION.md  README.md  phase 2 .md
tests/: README.md  integration_test.rs
(+485 files in other folders)
