[workspace]
resolver = "2"

members = [
    "crates/af_inet",
    "crates/af_inet6",
    "crates/anycast",
    "crates/arp",
    "crates/bpf_tcp_ca",
    "crates/calipso",
    "crates/cipso_ipv4",
    "crates/core",
    "crates/datagram",
    "crates/devinet",
    "crates/esp4",
    "crates/esp4_offload",
    "crates/esp6",
    "crates/esp6_offload",
    "crates/exthdrs",
    "crates/exthdrs_core",
    "crates/exthdrs_offload",
    "crates/fib6_notifier",
    "crates/fib6_rules",
    "crates/fib_frontend",
    "crates/fib_notifier",
    "crates/fib_rules",
    "crates/fib_semantics",
    "crates/fib_trie",
    "crates/fou",
    "crates/fou6",
    "crates/gre_demux",
    "crates/gre_offload",
    "crates/icmp",
    "crates/igmp",
    "crates/inet6_connection_sock",
    "crates/inet6_hashtables",
    "crates/inet_connection_sock",
    "crates/ip6_checksum",
    "crates/ip6_fib",
    "crates/ip6_flowlabel",
    "crates/ip6_gre",
    "crates/ip6_icmp",
    "crates/ip6_input",
    "crates/ip6_offload",
    "crates/ip6_output",
    "crates/ip6_tunnel",
    "crates/ip6_udp_tunnel",
    "crates/ip6_vti",
    "crates/ip6mr",
    "crates/ipcomp6",
    "crates/ipv6_sockglue",
    "crates/mcast",
    "crates/mcast_snoop",
    "crates/mip6",
    "crates/ndisc",
    "crates/netfilter",
    "crates/nf_conncount",
    "crates/nf_conntrack_acct",
    "crates/nf_conntrack_amanda",
    "crates/nf_conntrack_broadcast",
    "crates/nf_conntrack_core",
    "crates/nf_conntrack_ecache",
    "crates/nf_conntrack_expect",
    "crates/nf_conntrack_extend",
    "crates/nf_conntrack_ftp",
    "crates/nf_conntrack_h323_asn1",
    "crates/nf_conntrack_h323_main",
    "crates/nf_conntrack_helper",
    "crates/nf_conntrack_irc",
    "crates/nf_conntrack_netbios_ns",
    "crates/nf_conntrack_netlink",
    "crates/nf_conntrack_pptp",
    "crates/nf_conntrack_proto",
    "crates/nf_conntrack_proto_dccp",
    "crates/nf_conntrack_proto_generic",
    "crates/nf_conntrack_proto_gre",
    "crates/nf_conntrack_proto_icmp",
    "crates/nf_conntrack_proto_icmpv6",
    "crates/nf_conntrack_proto_sctp",
    "crates/nf_conntrack_proto_tcp",
    "crates/nf_conntrack_proto_udp",
    "crates/nf_conntrack_sane",
    "crates/nf_conntrack_seqadj",
    "crates/nf_conntrack_sip",
    "crates/nf_conntrack_snmp",
    "crates/nf_conntrack_standalone",
    "crates/nf_conntrack_tftp",
    "crates/nf_conntrack_timeout",
    "crates/nf_conntrack_timestamp",
    "crates/nf_dup_netdev",
    "crates/nf_flow_table_inet",
    "crates/nf_log",
    "crates/nf_log_syslog",
    "crates/nf_nat_amanda",
    "crates/nf_nat_core",
    "crates/nf_nat_ftp",
    "crates/nf_nat_helper",
    "crates/nf_nat_irc",
    "crates/nf_nat_masquerade",
    "crates/nf_nat_proto",
    "crates/output_core",
    "crates/ping",
    "crates/raw",
    "crates/reassembly",
    "crates/route",
    "crates/rpl",
    "crates/seg6",
    "crates/seg6_hmac",
    "crates/seg6_iptunnel",
    "crates/seg6_local",
    "crates/sit",
    "crates/syncookies",
    "crates/sysctl_net_ipv6",
    "crates/tcp_ipv6",
    "crates/tcpv6_offload",
    "crates/tunnel6",
    "crates/udp",
    "crates/udp_offload",
    "crates/udplite",
    "crates/xfrm6_input",
    "crates/xfrm6_output",
    "crates/xfrm6_policy",
    "crates/xfrm6_protocol",
    "crates/xfrm6_state",
    "crates/xfrm6_tunnel",
]

[workspace.package]
version = "0.3.0"
edition = "2021"
authors = ["Rust Linux Mini Kernel Contributors"]
license = "GPL-2.0"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
