[workspace]
resolver = "2"
members = [
    "crates/*",
    "examples/micro_kernel_demo",
]

[workspace.package]
version = "0.4.0"
edition = "2021"
authors = ["Linux Kernel Contributors", "Socrate AI"]
license = "GPL-2.0"

[workspace.dependencies]
libc = "0.2"

[profile.dev]
opt-level = 0
panic = "abort"

[profile.release]
opt-level = 3
lto = true
panic = "abort"
