[package]
name = "micro_kernel_demo"
version = "0.1.0"
edition = "2021"

[dependencies]
kernel_types = { path = "../../crates/kernel_types" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
opt-level = "z"

[[bin]]
name = "micro_kernel"
path = "src/main.rs"

[[bin]]
name = "micro_kernel_hosted"
path = "src/main_hosted.rs"
