[package]
name = "net_core_lwt_bpf"
version = "0.1.0"
edition = "2021"
authors = ["Socrate Agora Pipeline"]

[dependencies]
libc = "0.2"

[features]
default = []
kernel-mode = []

[lib]
name = "lwt_bpf"
path = "src/lib.rs"
crate-type = ["staticlib", "cdylib"]

[package.metadata]
category = "net/core"
kernel-subsystem = "networking"
original-name = "lwt_bpf"
