[package]
name = "net_core_sysctl_net_core"
version = "0.1.0"
edition = "2021"
authors = ["Socrate Agora Pipeline"]

[dependencies]
libc = "0.2"

[features]
default = []
kernel-mode = []

[lib]
name = "sysctl_net_core"
path = "src/lib.rs"
crate-type = ["staticlib", "cdylib"]

[package.metadata]
category = "net/core"
kernel-subsystem = "networking"
original-name = "sysctl_net_core"
