[package]
name = "net_ipv4_sysctl_net_ipv4"
version = "0.1.0"
edition = "2021"
authors = ["Socrate Agora Pipeline"]

[dependencies]
libc = "0.2"

[features]
default = []
kernel-mode = []

[lib]
name = "sysctl_net_ipv4"
path = "src/lib.rs"
crate-type = ["staticlib", "cdylib"]

[package.metadata]
category = "net/ipv4"
kernel-subsystem = "networking"
original-name = "sysctl_net_ipv4"
